Correction ligne de merdre en overflow

--- a/static/sass/homepage.scss
+++ b/static/sass/homepage.scss
@@ -73,6 +73,7 @@ img.point_kooblit{
 .last_first_row{
   position: absolute;
   bottom: $bande_heigth +10px;
+  width: auto;
 }
 
 .homepage_quote {
